--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -24,7 +24,7 @@
     }
   },
   "auth": {
-    "myappca3b592d": {
+    "myapp2f0917ae": {
       "customAuth": false,
       "dependsOn": [],
       "frontendAuthConfig": {
